--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,77 +1,69 @@
 <div class="container">
 
 	<div class="row">
-
-		<div class="col-md-12">
-			<img src="/assets/img/burger.png" alt="burger" class="img-responsive center-block">
-		</div>
-
-	<!-- first row end -->
+		<img id="burger-header-img" class="img-responsive center-block" src="assets/img/burger.png"/>
+		<h1 class="text-center">Eat-Da-Burger!</h1>
 	</div>
 
-	<div class="row">
-
-		<div class="col-md-12">
-			<h1 class="text-center text-danger">Eat-Da-Burger</h1>
-		</div>
-	
-	<!-- second row end -->
+	<div class="row text-center">
+		<form method="POST" action="/burgers" class="form-inline">
+			<div class="form-group">
+				<input type="hidden" name="devoured" value="0"/>
+				<label class="sr-only" for="burger-input">Delicious burger</label>
+				<input name="burger" type="text" class="form-control" id="burger-input" placeholder="Enter a delicious burger"/>
+			</div>
+			<button type="submit" class="btn btn-default">SUBMIT</button>
+		</form>
 	</div>
 
-	<div class="row">
+	<div class="row text-center">
+		<div class="col-xs-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">DELICIOUS BURGERS</div>
+				<div id="burgers-added" class="panel-body">
 
-		<div class="col-md-5">
-			<h3>Uneaten Burgers</h3>
-			<ul>
-				{{#each burgers}}
-					{{#unless this.devoured}}
-						<li>
-							<h5>{{this.id}}. {{this.burger_name}}
-								<form action='burgers/updateOne/{{this.id}}?_method=PUT' method='POST'>
-									<input type='hidden' name='devoured' value='true'>
-									<button type='submit' class="btn btn-default">EAT!</button>
+						<hr>
+
+						{{#each burgers}}
+							{{#unless devoured}}
+								<form method="POST" action="/burgers/update/{{burger_id}}?_method=PUT" class="form-inline">
+									<div class="form-group">
+										<input type="hidden" name="devoured" value="1"/>
+										<label class="sr-only">Delicious burger</label>
+										<p class="form-control-static">{{ burger_name }}</p>
+									</div>
+									<button id="burger-id{{burger_id}}" type="submit" class="btn btn-default">DEVOUR!!</button>
+									<hr>
 								</form>
-							</h5>
-						</li>
-					{{/unless}}
-				{{/each}}
-			</ul>
-		</div>
+							{{/unless}}
+						{{/each}}
 
-		<div class="col-md-2"></div>
-
-		<div class="col-md-5">
-			<h3 class="text-muted">Eaten Burgers</h3>
-			<ul>
-				{{#each burgers}}
-					{{#if this.devoured}}
-						<li>
-							<h5 class="text-muted">{{this.id}}. {{this.burger_name}}</h5>
-						</li>
-					{{/if}}
-				{{/each}}
-			</ul>
-		</div>
-
-	<!-- third row end -->
-	</div>
-
-	<br><br>
-
-	<div class="row">
-
-		<div class="col-md-12 text-center">
-			<form class="create-update-form" action="burgers/insertOne" method="POST">
-				<div class="form-group">
-					<textarea type="text" name="name"></textarea><br>
-					<button class="btn btn-default" type="submit">Submit</button>
-					<h5 class="text-center">Enter you want to eat!</h5>
 				</div>
-			</form>
+			</div>
 		</div>
+		<div class="col-xs-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">DEVOURED BURGERS</div>
+				<div id="burgers-devoured" class="panel-body">
 
-	<!-- fourth row end -->
+						<hr>
+
+						{{#each burgers}}
+							{{#if devoured}}
+								<form method="POST" action="/burgers/update/{{burger_id}}?_method=DELETE" class="form-inline">
+									<div class="form-group">
+										<label class="sr-only">Devoured burger</label>
+										<p class="form-control-static">{{ burger_name }}</p>
+									</div>
+									<button id="burger-id{{burger_id}}" type="submit" class="btn btn-default">Trash it.</button>
+									<hr>
+								</form>
+							{{/if}}
+						{{/each}}
+
+				</div>
+			</div>
+		</div>
 	</div>
 
-<!-- bootstrap container end -->
 </div>
