--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,69 +1,72 @@
 <div class="container">
 
 	<div class="row">
-		<img id="burger-header-img" class="img-responsive center-block" src="assets/img/burger.png"/>
-		<h1 class="text-center">Eat-Da-Burger!</h1>
-	</div>
 
-	<div class="row text-center">
-		<form method="POST" action="/burgers" class="form-inline">
-			<div class="form-group">
-				<input type="hidden" name="devoured" value="0"/>
-				<label class="sr-only" for="burger-input">Delicious burger</label>
-				<input name="burger" type="text" class="form-control" id="burger-input" placeholder="Enter a delicious burger"/>
-			</div>
-			<button type="submit" class="btn btn-default">SUBMIT</button>
-		</form>
-	</div>
-
-	<div class="row text-center">
-		<div class="col-xs-6">
-			<div class="panel panel-default">
-				<div class="panel-heading">DELICIOUS BURGERS</div>
-				<div id="burgers-added" class="panel-body">
-
-						<hr>
-
-						{{#each burgers}}
-							{{#unless devoured}}
-								<form method="POST" action="/burgers/update/{{burger_id}}?_method=PUT" class="form-inline">
-									<div class="form-group">
-										<input type="hidden" name="devoured" value="1"/>
-										<label class="sr-only">Delicious burger</label>
-										<p class="form-control-static">{{ burger_name }}</p>
-									</div>
-									<button id="burger-id{{burger_id}}" type="submit" class="btn btn-default">DEVOUR!!</button>
-									<hr>
-								</form>
-							{{/unless}}
-						{{/each}}
-
-				</div>
-			</div>
+		<div class="col-md-12">
+			<img src="/assets/img/burger.png" alt="burger" class="img-responsive center-block">
 		</div>
-		<div class="col-xs-6">
-			<div class="panel panel-default">
-				<div class="panel-heading">DEVOURED BURGERS</div>
-				<div id="burgers-devoured" class="panel-body">
 
-						<hr>
-
-						{{#each burgers}}
-							{{#if devoured}}
-								<form method="POST" action="/burgers/update/{{burger_id}}?_method=DELETE" class="form-inline">
-									<div class="form-group">
-										<label class="sr-only">Devoured burger</label>
-										<p class="form-control-static">{{ burger_name }}</p>
-									</div>
-									<button id="burger-id{{burger_id}}" type="submit" class="btn btn-default">Trash it.</button>
-									<hr>
-								</form>
-							{{/if}}
-						{{/each}}
-
-				</div>
-			</div>
-		</div>
 	</div>
 
+	<div class="row">
+
+		<div class="col-md-12">
+			<h1 class="text-center text-danger">Eat-Da-Burger</h1>
+		</div>
+	
+	</div>
+
+<!-- Current Burger -->	
+<div class="col-md-2"></div>
+<div class="row">
+	<div class="col-md-4">
+  		<h2 class="uneaten-title text-danger">Current Burger</h2>
+  			<ul class="uneaten">
+    				{{#each burgers}}
+      				{{#unless this.devoured}}
+        		<li>
+          		<p>{{this.burger_name}}</p>
+          			<form action="burgers/update/{{this.id}}?_method=PUT" method="POST">
+            		<input type="hidden" name="devoured" value="true">
+            		<button type="submit" class="btn btn-default">Eat!</button>
+          			</form>
+        		</li>
+     				 {{/unless}}
+   					 {{/each}}
+  			</ul>
+	</div>
+
+<!-- Burgers Eaten -->	
+	<div class="col-md-2"></div>
+	<div class="col-md-4" id="eaten">
+      <h2 class="eaten-title text-danger">Eaten Burgers</h2>
+      <ul class="burgers-eaten">
+        {{#each burgers}}
+          {{#if this.devoured}}
+            <li>
+              <p>
+                {{this.burger_name}}
+              </p>
+            </li>
+            <form action="burgers/update/{{this.id}}?_method=PUT" method="POST">
+             <input type="hidden" name="devoured" value="false">
+          {{/if}}
+        {{/each}}
+      </ul>
+    </div>
+</div>
+
+<!-- Add Burger Section -->
+<div class="row">
+  <div class="col-md-2"></div>
+    <div class="col-md-4" id="update">
+      <br><br><br>
+        <form class="create-update-form" action="burgers/create" method="POST">
+          <div class="form-group">
+            <input type="hidden" name="devoured" value="0">
+            <input type="text" id="newBurger" name="burger_name">
+          <button type="submit" class="btn btn-default">Add Burger</button>
+        </form>
+      </div>
+    </div>
 </div>
